aks/chatsappai-datasource-loader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
    kompose.version: 1.21.0 (992df58d8)
  labels:
    io.kompose.service: chatsappai-datasource-loader
  name: chatsappai-datasource-loader
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chatsappai-datasource-loader
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
        kompose.version: 1.21.0 (992df58d8)
      labels:
        io.kompose.service: chatsappai-datasource-loader
    spec:
      containers:
        - name: chatsappai-datasource-loader
          image: chatsappaicontainer.azurecr.io/docker-chatsappai_datasource_loader
          imagePullPolicy: Always
          command:
            - /bin/sh
            - -c
            - 'node apps/dashboard/.next/server/datasource-loader.js'
          volumeMounts:
            - name: datasource-loader-storage
              mountPath: /mnt/datasource
      volumes:
        - name: datasource-loader-storage
          persistentVolumeClaim:
            claimName: datasource-loader-pvc
      restartPolicy: Always
