aks/init-bucket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: init-bucket
  name: init-bucket
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: init-bucket
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: init-bucket
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - ' sleep 10; /usr/bin/mc config host add minio http://minio:9000 root password;
          /usr/bin/mc mb minio/chatsappai; /usr/bin/mc anonymous set public minio/chatsappai;
          exit 0; '
        image: minio/mc
        imagePullPolicy: ""
        name: init-bucket
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
