aks/maildev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: maildev
  name: maildev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: maildev
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: maildev
    spec:
      containers:
      - image: maildev/maildev
        imagePullPolicy: ""
        name: maildev
        ports:
        - containerPort: 1080
        - containerPort: 1025
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
