aks/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: minio
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: minio
    spec:
      containers:
      - args:
        - server
        - /data
        image: minio/minio
        imagePullPolicy: ""
        name: minio
        ports:
        - containerPort: 9000
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: minio-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: minio-data
        persistentVolumeClaim:
          claimName: minio-data
status: {}
