aks/qdrant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: qdrant
  name: qdrant
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: qdrant
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: qdrant
    spec:
      containers:
      - image: qdrant/qdrant
        imagePullPolicy: ""
        name: qdrant
        ports:
        - containerPort: 6333
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
