aks/redis-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-ui
  name: redis-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis-ui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: redis-ui
    spec:
      containers:
      - env:
        - name: REDIS_HOSTS
          value: local:redis:6379
        image: rediscommander/redis-commander
        imagePullPolicy: ""
        name: redis-ui
        ports:
        - containerPort: 8081
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
