aks/chatsappai-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
    kompose.version: 1.21.0 (992df58d8)
  labels:
    io.kompose.service: chatsappai-dashboard
  name: chatsappai-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chatsappai-dashboard
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
        kompose.version: 1.21.0 (992df58d8)
      labels:
        io.kompose.service: chatsappai-dashboard
    spec:
      containers:
        - name: chatsappai-dashboard
          image: dashboardchatsappaicontainer.azurecr.io/dashboard.chatsappai
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: chatsappai-dashboard
spec:
  type: LoadBalancer
  selector:
    io.kompose.service: chatsappai-dashboard
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
