aks/chatsappai-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
    kompose.version: 1.21.0 (992df58d8)
  labels:
    io.kompose.service: chatsappai-dashboard
  name: chatsappai-dashboard
spec:
  ports:
    - name: '3000'
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: chatsappai-dashboard
