aks/maildev-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: maildev
  name: maildev
spec:
  ports:
  - name: "1080"
    port: 1080
    targetPort: 1080
  - name: "1025"
    port: 1025
    targetPort: 1025
  selector:
    io.kompose.service: maildev
status:
  loadBalancer: {}
