aks/qdrant-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.build.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: qdrant
  name: qdrant
spec:
  ports:
  - name: "6333"
    port: 6333
    targetPort: 6333
  selector:
    io.kompose.service: qdrant
status:
  loadBalancer: {}
