aks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
    ingress.kubernetes.io/ssl-redirect: 'false'
    ingress.kubernetes.io/force-ssl-redirect: 'false'
spec:
  tls:
    - hosts:
        - dashboard.chatsappai.com
      secretName: ssl-cert-production
  rules:
    - host: dashboard.chatsappai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatsappai-dashboard
                port:
                  number: 80
